feat: 更新代碼並加強 .gitignore 保護敏感資訊

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,20 @@
-﻿bananadb.db
+﻿# 環境變數與 API Keys
+.env
+.env.local
+
+# 資料庫檔案
+bananadb.db
+*.db
+*.db-journal
+
+# Python 虛擬環境
 venv/
+env/
+
+# Python 快取
 __pycache__/
-uploads/
 *.pyc
+*.pyo
+
+# 使用者上傳檔案
+uploads/
